// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Snapshots renders default carousel correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="true"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with autoPlay correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="true"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with custom active index correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-100%); transition: none;"
        >
          <div
            aria-hidden="true"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="false"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="true"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with custom aspect ratio correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 42.857142857142854%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="true"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with custom className correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg custom-carousel"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="true"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with custom navigation correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;

exports[`Carousel Snapshots renders with infinite scrolling correctly 1`] = `
<DocumentFragment>
  <div
    class="relative overflow-hidden rounded-lg"
  >
    <div
      class="relative w-full"
      style="padding-bottom: 56.25%;"
    >
      <div
        class="absolute inset-0"
      >
        <div
          class="flex h-full transition-transform duration-300 ease-in-out"
          style="transform: translateX(-0%); transition: none;"
        >
          <div
            aria-hidden="false"
            aria-label="First slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 1
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Second slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 2
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="Third slide"
            class="w-full h-full flex-shrink-0"
          >
            <div>
              Slide 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Vorheriges Bild"
      class="
              absolute top-1/2 left-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19l-7-7 7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <button
      aria-label="Nächstes Bild"
      class="
              absolute top-1/2 right-2 z-10 -translate-y-1/2
              p-2 rounded-full
              bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50
              hover:bg-opacity-75 dark:hover:bg-opacity-75
              cursor-pointer
            "
      type="button"
    >
      <svg
        class="h-6 w-6 text-gray-800 dark:text-gray-200"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 5l7 7-7 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      class="absolute bottom-2 left-0 right-0 z-10 flex justify-center"
    >
      <div
        class="flex space-x-2"
      >
        <button
          aria-current="true"
          aria-label="Go to slide 1"
          class="
                w-3 h-3 rounded-full
                bg-primary-500 dark:bg-primary-400
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 2"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
        <button
          aria-current="false"
          aria-label="Go to slide 3"
          class="
                w-3 h-3 rounded-full
                bg-gray-300 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500
                transition-all duration-200
                cursor-pointer
              "
          type="button"
        />
      </div>
    </div>
    <style>
      
        @keyframes fadeIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
        
        @keyframes fadeOut {
          from { opacity: 1; }
          to { opacity: 0; }
        }
      
    </style>
  </div>
</DocumentFragment>
`;
